--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Hemeswar Reddy S</h1>
+    <h1>Hemeswar Reddy Sirigireddy</h1>
 </body>
 </html>
